--- a/Squirrel/Squirrel.Web/Squirrel.Web.csproj
+++ b/Squirrel/Squirrel.Web/Squirrel.Web.csproj
@@ -157,7 +157,10 @@
     <Compile Include="Areas\Author\Controllers\TopicsController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
+    <Compile Include="Controllers\FileController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\IssueController.cs" />
+    <Compile Include="Controllers\IssuesController.cs" />
     <Compile Include="Filters\AreaAuthorizationFilter.cs" />
     <Compile Include="Filters\LogFilter.cs" />
     <Compile Include="Global.asax.cs">
@@ -4467,6 +4470,10 @@
     <Content Include="Areas\Author\Views\Comments\SearchResult.cshtml" />
     <Content Include="Areas\Author\Views\Comments\PostDetails.cshtml" />
     <Content Include="Areas\Author\Views\Comments\Add.cshtml" />
+    <Content Include="Areas\Author\Views\Comments\SearchItem.cshtml" />
+    <Content Include="Areas\Author\Views\Comments\Edit.cshtml" />
+    <Content Include="Areas\Author\Views\Comments\Remove.cshtml" />
+    <Content Include="Areas\Author\Views\Comments\Answer.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -4519,6 +4526,8 @@
     <Content Include="Scripts\MdBootstrapPersianDateTimePicker\jquery.Bootstrap-PersianDateTimePicker.min.js.map">
       <DependentUpon>jquery.Bootstrap-PersianDateTimePicker.min.js</DependentUpon>
     </Content>
+    <Content Include="Views\Issue\Index.cshtml" />
+    <Content Include="Views\Issues\Category.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Squirrel.Domain\Squirrel.Domain.csproj">
@@ -4543,6 +4552,7 @@
     <Folder Include="Areas\Author\Models\" />
     <Folder Include="Content\Files\temp\" />
     <Folder Include="Views\Base\" />
+    <Folder Include="Views\File\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
