--- a/Squirrel/Squirrel.Web/Web.config
+++ b/Squirrel/Squirrel.Web/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <configSections>
-
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="botDetect" requirePermission="false" type="BotDetect.Configuration.BotDetectConfigurationSection, BotDetect" />
   </configSections>
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Squirrel.Web-20150113063747.mdf;Initial Catalog=aspnet-Squirrel.Web-20150113063747;Integrated Security=True"
@@ -28,6 +28,16 @@
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" maxRequestLength="102400" />
     <customErrors mode="RemoteOnly" defaultRedirect="~/Error" />
+    <!-- Register the HttpHandler used for BotDetect Captcha requests -->
+    <httpHandlers>
+      <add verb="GET" path="BotDetectCaptcha.ashx" type="BotDetect.Web.CaptchaHandler, BotDetect" />
+    </httpHandlers>
+    <sessionState mode="InProc" cookieless="AutoDetect" timeout="20" sessionIDManagerType="BotDetect.Web.CustomSessionIdManager, BotDetect" />
+    <pages enableSessionState="true">
+      <controls>
+        <add assembly="BotDetect" namespace="BotDetect.Web.UI" tagPrefix="BotDetect" />
+      </controls>
+    </pages>
   </system.web>
   <system.webServer>
     <security>
@@ -38,13 +48,16 @@
     <modules>
       <!--<remove name="FormsAuthentication" />-->
     </modules>
-    
-  <handlers>
+    <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+      <remove name="BotDetectCaptchaHandler" />
+      <add name="BotDetectCaptchaHandler" preCondition="integratedMode" verb="GET" path="BotDetectCaptcha.ashx" type="BotDetect.Web.CaptchaHandler, BotDetect" />
+    </handlers>
+    <validation validateIntegratedModeConfiguration="false" />
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -97,7 +110,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -111,4 +124,9 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <botDetect>
+    <captchaImage>
+      <helpLink enabled="true" mode="image" />
+    </captchaImage>
+  </botDetect>
 </configuration>
