--- a/Squirrel/Squirrel.Web/packages.config
+++ b/Squirrel/Squirrel.Web/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="bootstrap" version="3.3.2" targetFramework="net45" />
   <package id="Bower.js" version="1.2.7.10" targetFramework="net45" />
+  <package id="Captcha" version="3.0.16.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.2" targetFramework="net45" />
   <package id="jQuery" version="2.1.3" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.11.3" targetFramework="net45" />
